<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fab1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jexapps.bloodhub.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/emergency_request_button"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:text="@string/action_emergency_request"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:textSize="25sp"
            android:radius="2dp"
            android:textColor="@color/fab1"
            android:background="@drawable/mybutton_bg" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/background_light"
                    android:textColorLink="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorHighlight="@android:color/background_light"
                    android:textCursorDrawable="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|bottom"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="20dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:background="@drawable/mybutton1_bg" />
            <TextView
                android:text="@string/action_register_individual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_register_individual_button"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="80dp"
                android:gravity="bottom|center" />
            <TextView
                android:text="@string/action_register_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_register_organization_button"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="3dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
